stylesgide-  general styles file

--- a/index.html
+++ b/index.html
@@ -10,5 +10,11 @@
     <link rel="stylesheet" href="./styles.css">
     <title>Project</title>
 </head>
+<header class="header">
+    <div class="container logo-container">
+        <img src="./img/cat.svg" alt="cat" class="logo">
+        <h1 class="label">Котодім</h1>
+    </div>
+</header>
 
 </html>
